fix: contract agreement asset selection for consuming agreements